# CoSMo

./: CMakeLists.txt  README.md  main.cpp
data/: 1out_Human_tRNA_38.chr6.fold  config_file.txt  in.dbn  in2.dbn  output.ebpseq  trna.fasta
include/: option.h
